# ARCA

./: README.md  agent_schema.py  arca.html  docker-compose.yml  main.py  pyproject.toml  settings.json
RAG/: chunker.py  crawler.py  embedder.py  ingester.py  retrieve.py
db/: config.py  model.py
migrations/: env.py
migrations/versions/: f87f4dcc6b6b_initial_commit.py
scheduler/: WIRING.py  celery_app.py  executor.py  tasks.py
