[project]
name = "arca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "flagembedding>=1.3.5",
    "langchain-text-splitters>=1.1.1",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
